<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_info"
        android:orderInCategory="98"
        app:showAsAction="never"
        android:title="@string/track_details"/>
    <item
        android:id="@+id/action_volume"
        android:orderInCategory="99"
        app:showAsAction="never"
        android:title="@string/volume"/>
    <item
        android:id="@+id/audio_effect"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/audio_effect"/>
    <item
        android:id="@+id/goto_artist"
        android:orderInCategory="101"
        app:showAsAction="never"
        android:title="@string/goto_artist"/>
    <item
        android:id="@+id/goto_album"
        android:orderInCategory="102"
        app:showAsAction="never"
        android:title="@string/goto_album"/>

</menu>